updated docker-compose to show all services ports.